--- a/src/Tests/Tests.csproj
+++ b/src/Tests/Tests.csproj
@@ -4,10 +4,10 @@
     <NoWarn>EF1000</NoWarn>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="EfLocalDb" Version="5.0.0" />
+    <PackageReference Include="EfLocalDb" Version="5.1.0-beta.1" />
     <PackageReference Include="GraphQL" Version="2.4.0" />
     <PackageReference Include="ApprovalTests" Version="4.3.0" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.0-preview3.19554.8" />
     <PackageReference Include="ObjectApproval" Version="11.2.1" />
     <PackageReference Include="Xunit" Version="2.4.1" />
     <PackageReference Include="Xunit.ApprovalTests" Version="4.6.0" />
