Implementation of "matches" as a comparison type. In the current implementation, this is mapped to a Postgres query against a TsVector. This gives me the very most basic version of text search.
The next version of this feature will use more sophisticated text search
features including ranking.

--- a/src/GraphQL.EntityFramework/GraphQL.EntityFramework.csproj
+++ b/src/GraphQL.EntityFramework/GraphQL.EntityFramework.csproj
@@ -11,6 +11,8 @@
     <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.7" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="Npgsql" Version="5.0.0" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="3.1.4" />
     <PackageReference Include="Nullable" Version="1.2.1" PrivateAssets="All" />
     <PackageReference Include="ProjectDefaults" Version="1.0.43" PrivateAssets="All" />
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" Condition="$(Configuration) == 'Release'" />
